--- a/web/.env
+++ b/web/.env
@@ -1,1 +1,3 @@
-NUXT_PUBLIC_API_BASE= https://weather-l8f12y3cq-joao-balcas-projects.vercel.app/api
+NUXT_PUBLIC_API_BASE= https://wather-app-backend.vercel.app/api
+# Local API
+# NUXT_PUBLIC_API_BASE= http://localhost:3000/api
