--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,3 @@
-NUXT_PUBLIC_API_BASE= https://wather-app-backend.vercel.app/api
-# Local API
-# NUXT_PUBLIC_API_BASE= http://localhost:3000/api
+# NUXT_PUBLIC_API_BASE= https://wather-app-backend.vercel.app/api
+# Local API (please uncomment the line under if you want to use local API. comment the line above)
+NUXT_PUBLIC_API_BASE= http://localhost:3001/api
